[build-system]
requires = [
    "hatchling>=1.5.0",
]
build-backend = "hatchling.build"

[project]
name = "mock-github"
description = "Awesome mock_github created by blink1073"
readme = "README.md"
license = ""
authors = [
    { name = "blink1073" },
]
dependencies = ["ghapi", "fastapi", "requests", "uvicorn[standard]", "python-multipart"]
dynamic = [
    "version",
]

[project.optional-dependencies]
test = [
    "black",
    "codecov",
    "coverage",
    "flake8",
    "gitchangelog",
    "isort",
    "mkdocs",
    "mypy",
    "pytest",
    "pytest-cov",
]

[project.scripts]
mock_github = "mock_github.__main__:main"

[project.urls]
Homepage = "https://github.com/blink1073/mock_github/"

[tool.hatch.version]
path = "mock_github/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/mock_github",
]
